<resources>
    <string name="app_name">Basic_UI</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Bienvenue sur la page d\'accueil</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open_web">Ouvrir une page Internet</string>
    <string name="title_send_email">Basic UI Email</string>
    <string name="text_no_email_client">"No email "</string>
    <string name="send_mail">Envoyer mail</string>
    <string name="second_activity_hello">"Secondary Activity "</string>
    <string name="to_secondary_activity">Activité 2</string>
    <string name="text_alert_dialog">Dialog Alert</string>
    <string name="show">Accéder au site</string>
    <string name="alert_dialog">Pages Web</string>
    <string name="message_main_fragment">Welcome Main Fragment</string>
    <string name="le_monde">Le Monde</string>
    <string name="national_geographic">National Geographic</string>
    <string name="le_monde_website">www.lemonde.fr/</string>
    <string name="national_geographic_website">www.nationalgeographic.fr/</string>
    <string name="main_fragment_welcome">Ecran d\'accueil</string>
    <string name="secondFragment">Second Fragment</string>
    <string name="ynov_website">Site web Ynov Aix en provence</string>
    <string name="toast_message">Message Toast</string>
    <string name="toast_text">Developpement Mobile Kotlin :)</string>
    <string name="text_island">Heyyy Toast</string>
    <string name="text_alert">ALERTEEEEEE !!</string>
    <string name="action_like">Action Like</string>
    <string name="text_share">Partager</string>
    <string name="title_share">Titre de Partage</string>
    <string name="checkbox1">CheckBox 1</string>
    <string name="label_2">Checkbox 2</string>
    <string name="label_3">Checkbox 3</string>
    <string name="open_snack_bar">Open Snack Bar</string>
    <string name="text_label">YOUHOUUUU</string>
</resources>